--- a/projeto_web/src/resources/html/adicionarCampeonato.html
+++ b/projeto_web/src/resources/html/adicionarCampeonato.html
@@ -5,55 +5,49 @@
     <head>
         <title>Campeonato</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./css/bootstrap-4.3.1-dist/css/bootstrap.min.css">
-        <script src="css/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/site/sakura.css">
     </head>
 
     <body>
         <p><a href="/site">&lt; Voltar para página inicial</a></p>
         <h1>Adicionar Campeonato</h1>
 
-        <table>
+        <table>    
             <tr>
                 <td>Nome:</td>
                 <td><input type="text" id="txtNome"></td>
             </tr>
-            <tr>
-                <td></td>
-                <td><input type="button" onclick="criarCampeonato()" value="Criar"></td>
-            </tr>
+            <tr><td></td><td><input type="button" onclick="criarCampeonato()" value="Criar"></td></tr>
         </table>
         <p style="font-weight:bold" id="mensagem"></p>
+        
+    <script>
+        const textoNome = document.querySelector('#txtNome');
+        const paragrafoMensagem = document.querySelector('#mensagem');
+        
+        function mostrarMensagem(campeonatoCadastrado) {
+            textoNome.value = '';
+            paragrafoMensagem.innerHTML = 'Campeonato foi criado com id ' + campeonatoCadastrado.id;
+        }
 
-        <script>
-            const textoNome = document.querySelector('#txtNome');
-            const paragrafoMensagem = document.querySelector('#mensagem');
-
-            function mostrarMensagem(campeonatoCadastrado) {
-                textoNome.value = '';
-                paragrafoMensagem.innerHTML = 'Campeonato foi criado com id ' + campeonatoCadastrado.id;
+        async function criarCampeonato() {
+            const URL = `/api/campeonatos`;
+            const dadosCampeonato = {
+                                       'nome': textoNome.value
+                                   };
+            const postRequest =    {
+                                        method:'POST',
+                                        body: JSON.stringify(dadosCampeonato),
+                                        headers: { 'Content-type': 'application/json;charset=UTF-8' }
+                                   };
+            try {
+                fetch(URL, postRequest).then(resposta => resposta.json()).then(jsonResponse => mostrarMensagem(jsonResponse));
+            } catch (e) {
+                corpoTabela.innerHTML = e;
             }
+        }
 
-            async function criarCampeonato() {
-                const URL = `/api/campeonatos`;
-                const dadosCampeonato = {
-                    'nome': textoNome.value
-                };
-                const postRequest = {
-                    method: 'POST',
-                    body: JSON.stringify(dadosCampeonato),
-                    headers: {
-                        'Content-type': 'application/json;charset=UTF-8'
-                    }
-                };
-                try {
-                    fetch(URL, postRequest).then(resposta => resposta.json()).then(jsonResponse => mostrarMensagem(
-                        jsonResponse));
-                } catch (e) {
-                    corpoTabela.innerHTML = e;
-                }
-            }
-        </script>
+    </script>
     </body>
 
     </html>
