--- a/projeto_web/src/resources/html/adicionarTime.html
+++ b/projeto_web/src/resources/html/adicionarTime.html
@@ -5,8 +5,7 @@
     <head>
         <title>Time</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./css/bootstrap-4.3.1-dist/css/bootstrap.min.css">
-        <script src="css/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/site/sakura.css">
     </head>
 
     <body>
@@ -50,7 +49,7 @@
         }
 
         async function criarTime() {
-            const URL = `http://127.0.0.1:8080/api/times`;
+            const URL = `/api/times`;
             const dadosTime = {
                                        'nome': textoNome.value,
                                        'anoFundacao': textoAnodeFundacao.value,
