--- a/projeto_web/src/resources/html/adicionarEmpregado.html
+++ b/projeto_web/src/resources/html/adicionarEmpregado.html
@@ -44,7 +44,7 @@
                 const URL = `/api/empregados`;
                 const dadosEmpregado = {
                     'id_emp': textoIdEmp.value,
-                    'nome_empregado': textoNome.value
+                    'nome': textoNome.value
                 };
                 const postRequest = {
                     method: 'POST',
