--- a/projeto_web/src/resources/html/adicionarEmpresa.html
+++ b/projeto_web/src/resources/html/adicionarEmpresa.html
@@ -5,7 +5,8 @@
     <head>
         <title>Empresa</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/site/sakura.css">
+        <link rel="stylesheet" href="./css/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+        <script src="./css/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
     </head>
 
     <body>
